# RIS2018

./: .gitignore
Notebooks/: Clusterer.ipynb  KMeans.ipynb  PointGenerator.ipynb  ReadPlot.ipynb  Ring detection.ipynb  Rotating.ipynb  plot_mini_batch_kmeans.ipynb
Notebooks/.ipynb_checkpoints/: Ring detection-checkpoint.ipynb
cluster/launch/: speaker.launch
cluster/scripts/: cluster
cryptomaster/: CMakeLists.txt  package.xml
cryptomaster/launch/: crypto_master.launch
cryptomaster/scripts/: cluster.py  cluster2.py  constants.py  cryptomaster.py  data.py  hand.py  moves.py  path_generator.py  states.py  trader.py  util.py
exercise1/src/: subscribe_custom_msg_node.cpp
exercise3/: CMakeLists.txt  package.xml
exercise3/launch/: amcl_demo.launch  generate_path.launch  rotating_test.launch  start_robot.launch
exercise3/scripts/: constants.py  draw.py  generate_path  map_goals  moves.py  rotating_test  rotating_test.py  util.py
exercise3/src/: map_goals.cpp  map_goals_cpp.cpp
exercise4/: CMakeLists.txt
exercise4/launch/: amcl_demo.launch  cluster.launch  cluster2.launch  competition1.launch  costmap_common_params.yaml  detect_rings.launch  move_base.launch.xml  speaker.launch
exercise4/scripts/: breadcrumbs  cluster  cluster2  colorizer.py  data.py  detect_rings  speaker  util.py
exercise6/openservorobot/: CMakeLists.txt
exercise7/scripts/: rectify_rings
maps/: bigMap.pgm  bigMap.yaml
pcl_demos/: CMakeLists.txt
pcl_demos/src/: build_tree.cpp  centroid_estimation.cpp  cloud_viewer.cpp  cylinder_segmentation.cpp  don_segmentation.cpp  (+9 more)
(+3 files in other folders)
